# image-descriptors

./: .gitignore  BaseDescriptorGenerationPipeline.cpp  BaseDescriptorGenerationPipeline.h  BaseDistanceCalculation.cpp  BaseDistanceCalculation.h  CMakeLists.txt  DescriptorGenerator.cpp  DescriptorGenerator.h  DistanceCalculator.cpp  DistanceCalculator.h  NSSDCalculation.cpp  NSSDCalculation.h  NSSDPipeline.cpp  NSSDPipeline.h  README.md  S1SquareGridBilinearWeightedPipeline.cpp  S1SquareGridBilinearWeightedPipeline.h  T2GradientFieldPipeline.cpp  T2GradientFieldPipeline.h  TSDescriptorGenerationPipeline.cpp  TSDescriptorGenerationPipeline.h  main.cpp
